spacing issues

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,6 +38,7 @@ section{
 
 .Container{
     margin-top: 5%;
+    margin-bottom: 5%
 }
 
 .Container img{
